# nil-xit-test

./: CHANGELOG.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
cmake/: config.cmake.in  cpack.cmake  nil-xit-gtest.cmake  package.cmake  quality.cmake  toolchain.cmake
configure/: command
doc/: 01-MACROS.md  01-gtest.md  02-FRAMES.md  02-migration.md  03-TESTS.md  03-concepts.md  04-BINDING.md  04-cli.md  05-LOADERS.md  05-MACROS.md  06-PROS_CONS.md  06-custom-types.md  07-frame-bindings.md  08-file-utilities.md  09-conclusion.md  10-installation.md  CMakeLists.txt  package.json  pnpm-lock.yaml
doc/test/: CMakeLists.txt  Step_4Input.svelte  Step_4Output.svelte  step_1.cpp  step_2.cpp  step_3.cpp  step_4.cpp  step_5.cpp
sandbox/: CMakeLists.txt  frame_setup.hpp  global.d.ts  main.cpp  main2.cpp  package.json  pnpm-lock.yaml  tsconfig.json  userland_utils.cpp  userland_utils.hpp  xit_gtest.cpp  xit_gtest.hpp
sandbox/files/: slider_frame  slider_frame.msgpack
sandbox/files/draw/: circles_frame.json
sandbox/gui/: DrawFrame.svelte  GTestMain.svelte  Group.svelte  InputFrame.svelte  Label.svelte  Main.svelte  PlotlyFrame.svelte  Save.svelte  Slider.svelte  ViewFrame.svelte  codec.js  config.js
sandbox/gui/npmjs/: Frame.svelte
src/: CMakeLists.txt
src/gtest/: CMakeLists.txt
src/gtest/publish/nil/xit/: gtest.hpp
src/gtest/publish/nil/xit/gtest/: Data.hpp  Instances.hpp  MACROS.hpp  Test.hpp  TestTracker.hpp  main.hpp  type.hpp  utils.hpp
src/gtest/publish/nil/xit/gtest/builders/: FrameBuilder.hpp  MainBuilder.hpp  TestBuilder.hpp  install.hpp  none.hpp
src/gtest/publish/nil/xit/gtest/builders/frames/: IFrame.hpp
src/gtest/publish/nil/xit/gtest/builders/frames/expect/: Frame.hpp
src/gtest/publish/nil/xit/gtest/builders/frames/input/: Frame.hpp  global.hpp  tagged.hpp  test.hpp  unique.hpp
src/gtest/publish/nil/xit/gtest/builders/frames/main/: Frame.hpp
src/gtest/publish/nil/xit/gtest/builders/frames/output/: Frame.hpp
src/gtest/publish/nil/xit/gtest/builders/frames/view/: global.hpp  test.hpp
src/gtest/publish/nil/xit/gtest/headless/: CacheManager.hpp  Inputs.hpp
src/gtest/publish/nil/xit/gtest/utils/: from_data.hpp  from_file.hpp  from_member.hpp  from_self.hpp
src/gtest/src/: gtest.cpp  main.cpp
src/publish/nil/xit/: test.hpp
src/publish/nil/xit/test/: App.hpp  transparent_hash_map.hpp
src/publish/nil/xit/test/frame/input/: Unique.hpp
src/publish/nil/xit/test/frame/output/: Info.hpp
src/src/: test.cpp
src/src/test/: transparent_hash_map.cpp
src/test/: CMakeLists.txt
src/test/publish/nil/xit/test/: App.hpp  RerunTag.hpp  SingleFire.hpp  utils.hpp
src/test/publish/nil/xit/test/frame/: IDataManager.hpp  IInfo.hpp
src/test/publish/nil/xit/test/frame/expect/: Info.hpp
src/test/publish/nil/xit/test/frame/input/: Global.hpp  Info.hpp  Tagged.hpp  Test.hpp  Unique.hpp
src/test/publish/nil/xit/test/frame/output/: Info.hpp
src/test/publish/nil/xit/test/frame/view/: Global.hpp  Info.hpp  Test.hpp
src/test/src/: App.cpp  RerunTag.cpp  SingleFire.cpp
